--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>罗家鸣</title>
 </head>
 <body>
@@ -18,12 +19,15 @@
         padding: 15px;
         line-height: 1.7;
         ">
-        <p>我的技能</p>
+        <d>我的技能</d>
         <p>我的项目</p>
         <p>我的作品</p>
         <p>我的荣誉</p>
         <p>我的爱好</p>
     </div>
+
+    <h1></h1>
+
     <div style="
         background-color: #f1f1f1;
         text-align: center;
