--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="myIntroduce" content="is introduce of ljm">
+    <meta
+        name="description"
+        content="Mary's simple recipe for maple bacon donuts
+           makes a sticky, sweet treat with just a hint
+           of salt that you'll keep coming back for.">
     <title>罗家鸣</title>
 </head>
 <body>
